Tweaked responsive images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="js-scroll-trigger mt-1" href="#page-top"><img height="30em" width="auto" src="img/logo_nav.png" alt="Psynapse.no" title="" /></img></a>
+        <a class="js-scroll-trigger mt-1" href="#page-top"><img height="29em" width="140em" src="img/logo_nav.png" alt="Psynapse.no" title="" /></img></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Meny
@@ -97,7 +97,7 @@
             <div class="col-lg-12 text-center">
               <div class="intro-heading text-uppercase">Mikrodosering</div>
               <!--img class="mb-3" width="128" height="128" src="img/mushrooms.svg" alt=""-->
-              <img class="mt-3 mb-5" width="216em" height="auto" src="img/microdose.svg" alt="">
+              <img class="mt-3 mb-5" width="216em" height="104em" src="img/microdose.svg" alt="">
               <div class="text-faded mb-4">
                 <p>
                   Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin.
@@ -556,8 +556,8 @@
               </div>
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb1_med.jpg" srcset="img/thumbnails/thumb1.jpg 2x" alt="">
+                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/med.jpg 2x">
+                <img width="100%" height="100%" src="img/thumbnails/thumb1_low.jpg" srcset="img/thumbnails/thumb1_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
@@ -574,8 +574,8 @@
               </div>
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb2_med.jpg" srcset="img/thumbnails/thumb2.jpg 2x" alt="">
+                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2_med.jpg 2x">
+                <img width="100%" height="100%" src="img/thumbnails/thumb2_low.jpg" srcset="img/thumbnails/thumb2_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
@@ -592,8 +592,8 @@
               </div>
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb3_med.jpg" srcset="img/thumbnails/thumb3.jpg 2x" alt="">
+                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3_med.jpg 2x">
+                <img width="100%" height="100%" src="img/thumbnails/thumb3_low.jpg" srcset="img/thumbnails/thumb3_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>The Ultimate Guide to Microdosing</h4>
@@ -610,8 +610,8 @@
               </div>
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb4_med.jpg" srcset="img/thumbnails/thumb4.jpg 2x" alt="">
+                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4_med.jpg 2x">
+                <img width="100%" height="100%" src="img/thumbnails/thumb4_low.jpg" srcset="img/thumbnails/thumb4_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Paul Austin: Microdosing Psychedelics</h4>
@@ -628,7 +628,7 @@
       <div class="container mb-5">
         <div class="row text-center">
           <div class="col-md-8 mx-auto">
-            <img class="mt-5 mb-5" height="50em" width="auto" src="img/logo_black.svg" alt="">
+            <img class="mt-5 mb-5" height="51em" width="240em" src="img/logo_black.svg" alt="">
             <p class="section-subheading">
               Psynapse er et nettverk som jobber for å skape anerkjennelse og forståelse for
               bruk av psykedelika og MDMA, både i rekreasjonelle, seremonielle eller terapeutiske former.
