--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="js-scroll-trigger mt-1" href="#page-top"><img height="29em" width="140em" src="img/logo_nav.png" alt="Psynapse.no" title="" /></img></a>
+        <a class="js-scroll-trigger mt-1" href="#page-top"><img height="29em" width="140em" src="img/logo_nav@1x.png" alt="Psynapse.no" title="" /></img></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Meny
