--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
               </div>
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/med.jpg 2x">
+                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1_med.jpg 2x">
                 <img width="100%" height="100%" src="img/thumbnails/thumb1_low.jpg" srcset="img/thumbnails/thumb1_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
