Reverted theme color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="msapplication-TileColor" content="#5f5aff">
     <meta name="msapplication-config" content="browserconfig.xml">
-    <meta name="theme-color" content="#222">
+    <meta name="theme-color" content="#5f5aff">
     <meta property="og:image" content="http://mikrodosering.no/img/header.jpg" />
     <meta property="og:title" content="Mikrodosering.no - Veileder til mikrodosering med psykedelika" />
     <meta property="og:url" content="http://mikrodosering.no/">
