Added lower resolution background images, fixed Inter font

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileColor" content="#5f5aff">
     <meta name="msapplication-config" content="browserconfig.xml">
     <meta name="theme-color" content="#5f5aff">
-    <meta property="og:image" content="http://mikrodosering.no/img/header.jpg" />
+    <meta property="og:image" content="http://mikrodosering.no/img/header@1x.jpg" />
     <meta property="og:title" content="Mikrodosering.no - Veileder til mikrodosering med psykedelika" />
     <meta property="og:url" content="http://mikrodosering.no/">
     <meta property="og:type" content="website">
@@ -40,6 +40,8 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
 
   </head>
 
