--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link href="vendor/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preload" href="/fonts/space-grotesk-v5-latin-500.woff2" as="font" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   </head>
 
