--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1.jpg 2x">
                 <source media="(min-width: 450px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1_med.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb1_low.jpg" srcset="img/thumbnails/thumb1_med.jpg 2x" alt="">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb1_low.jpg" srcset="img/thumbnails/thumb1_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
@@ -576,7 +576,7 @@
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2.jpg 2x">
                 <source media="(min-width: 450px)" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2_med.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb2_low.jpg" srcset="img/thumbnails/thumb2_med.jpg 2x" alt="">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb2_low.jpg" srcset="img/thumbnails/thumb2_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
@@ -594,7 +594,7 @@
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3.jpg 2x">
                 <source media="(min-width: 450px)" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3_med.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb3_low.jpg" srcset="img/thumbnails/thumb3_med.jpg 2x" alt="">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb3_low.jpg" srcset="img/thumbnails/thumb3_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>The Ultimate Guide to Microdosing</h4>
@@ -612,7 +612,7 @@
               <picture>
                 <source media="(min-width: 800px)" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4.jpg 2x">
                 <source media="(min-width: 450px)" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4_med.jpg 2x">
-                <img width="100%" height="100%" src="img/thumbnails/thumb4_low.jpg" srcset="img/thumbnails/thumb4_med.jpg 2x" alt="">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb4_low.jpg" srcset="img/thumbnails/thumb4_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Paul Austin: Microdosing Psychedelics</h4>
