Reverted render blocking, changed background to black

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="/fonts/space-grotesk-v5-latin-500.woff2" as="font" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   </head>
 
   <body id="page-top">
@@ -625,7 +626,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class=".bg-white">
+    <section id="contact" class="bg-white">
       <div class="container mb-5">
         <div class="row text-center">
           <div class="col-md-8 mx-auto">
@@ -671,7 +672,5 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/script.min.js"></script>
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
 </html>
