Added next-gen images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 
   <head>
     <!-- Google Tag Manager
@@ -556,9 +556,11 @@
                 </div>
               </div>
               <picture>
-                <source media="(min-width: 800px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1_med.jpg 2x">
-                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb1_low.jpg" srcset="img/thumbnails/thumb1_med.jpg 2x" alt="">
+                <source media="(min-width: 800px)" type="image/webp" srcset="img/thumbnails/thumb1_med.webp, img/thumbnails/thumb1.webp 2x">
+                <source media="(min-width: 450px)" type="image/webp" srcset="img/thumbnails/thumb1_low.webp, img/thumbnails/thumb1_med.webp 2x">
+                <source media="(min-width: 800px)" type="image/jpeg" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1.jpg 2x">
+                <source media="(min-width: 450px)" type="image/jpeg" srcset="img/thumbnails/thumb1_med.jpg, img/thumbnails/thumb1_med.jpg 2x">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb1_low.jpg" type="image/jpeg" srcset="img/thumbnails/thumb1_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
@@ -574,9 +576,11 @@
                 </div>
               </div>
               <picture>
-                <source media="(min-width: 800px)" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2_med.jpg 2x">
-                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb2_low.jpg" srcset="img/thumbnails/thumb2_med.jpg 2x" alt="">
+                <source media="(min-width: 800px)" type="image/webp" srcset="img/thumbnails/thumb2_med.webp, img/thumbnails/thumb2.webp 2x">
+                <source media="(min-width: 450px)" type="image/webp" srcset="img/thumbnails/thumb2_low.webp, img/thumbnails/thumb2_med.webp 2x">
+                <source media="(min-width: 800px)" type="image/jpeg" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2.jpg 2x">
+                <source media="(min-width: 450px)" type="image/jpeg" srcset="img/thumbnails/thumb2_med.jpg, img/thumbnails/thumb2_med.jpg 2x">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb2_low.jpg" type="image/jpeg" srcset="img/thumbnails/thumb2_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
@@ -592,9 +596,11 @@
                 </div>
               </div>
               <picture>
-                <source media="(min-width: 800px)" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3_med.jpg 2x">
-                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb3_low.jpg" srcset="img/thumbnails/thumb3_med.jpg 2x" alt="">
+                <source media="(min-width: 800px)" type="image/webp" srcset="img/thumbnails/thumb3_med.webp, img/thumbnails/thumb3.webp 2x">
+                <source media="(min-width: 450px)" type="image/webp" srcset="img/thumbnails/thumb3_low.webp, img/thumbnails/thumb3_med.webp 2x">
+                <source media="(min-width: 800px)" type="image/jpeg" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3.jpg 2x">
+                <source media="(min-width: 450px)" type="image/jpeg" srcset="img/thumbnails/thumb3_med.jpg, img/thumbnails/thumb3_med.jpg 2x">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb3_low.jpg" type="image/jpeg" srcset="img/thumbnails/thumb3_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>The Ultimate Guide to Microdosing</h4>
@@ -610,9 +616,11 @@
                 </div>
               </div>
               <picture>
-                <source media="(min-width: 800px)" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4.jpg 2x">
-                <source media="(min-width: 450px)" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4_med.jpg 2x">
-                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb4_low.jpg" srcset="img/thumbnails/thumb4_med.jpg 2x" alt="">
+                <source media="(min-width: 800px)" type="image/webp" srcset="img/thumbnails/thumb4_med.webp, img/thumbnails/thumb4.webp 2x">
+                <source media="(min-width: 450px)" type="image/webp" srcset="img/thumbnails/thumb4_low.webp, img/thumbnails/thumb4_med.webp 2x">
+                <source media="(min-width: 800px)" type="image/jpeg" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4.jpg 2x">
+                <source media="(min-width: 450px)" type="image/jpeg" srcset="img/thumbnails/thumb4_med.jpg, img/thumbnails/thumb4_med.jpg 2x">
+                <img loading="lazy" width="100%" height="100%" src="img/thumbnails/thumb4_low.jpg" type="image/jpeg" srcset="img/thumbnails/thumb4_med.jpg 2x" alt="">
               </picture>
               <div class="grid-caption">
                 <h4>Paul Austin: Microdosing Psychedelics</h4>
@@ -662,6 +670,10 @@
       </div>
     </section>
 
+    <script>
+      document.documentElement.classList.remove("no-js");
+    </script>
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -671,6 +683,8 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/script.min.js"></script>
+
+    <script src="vendor/modernizr/modernizr-webp.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
