Added header fade-in

--- a/index.html
+++ b/index.html
@@ -670,9 +670,8 @@
       </div>
     </section>
 
-    <script>
-      document.documentElement.classList.remove("no-js");
-    </script>
+
+    <script>document.documentElement.classList.remove("no-js");</script>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
