--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link rel="preload" href="/fonts/space-grotesk-v5-latin-500.woff2" as="font" crossorigin="anonymous" />
   </head>
 
-  <body id="page-top">
+  <body id="page-top" class="preload">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -671,7 +671,15 @@
     </section>
 
 
-    <script>document.documentElement.classList.remove("no-js");</script>
+    <script>
+      document.documentElement.classList.remove("no-js");
+    </script>
+    
+    <script>
+      $(window).load(function() {
+        $("body").removeClass("preload");
+      });
+    </script>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
