--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link rel="preload" href="/fonts/space-grotesk-v5-latin-500.woff2" as="font" crossorigin="anonymous" />
   </head>
 
-  <body id="page-top" class="preload">
+  <body id="page-top">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -91,7 +91,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead">
+    <header class="masthead preload">
       <div class="container">
         <div class="intro-text">
           <div class="row mt-4">
@@ -674,7 +674,7 @@
     <script>
       document.documentElement.classList.remove("no-js");
     </script>
-    
+
     <script>
       $(window).load(function() {
         $("body").removeClass("preload");
