--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
         <div class="intro-text">
           <div class="row mt-4">
             <div class="col-lg-12 text-center">
-              <div class="intro-heading text-uppercase">Mikrodosering</div>
-              <!--img class="mb-3" width="128" height="128" src="img/mushrooms.svg" alt=""-->
-              <img class="mt-3 mb-5" width="216em" height="104em" src="img/microdose.svg" alt="">
+              <div class="intro-heading text-uppercase">Overskrift</div>
+              <img class="intro-image" width="216em" height="104em" src="img/microdose.svg" alt="">
               <div class="text-faded mb-4">
                 <p>
                   Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin.
@@ -107,24 +106,10 @@
                   for eksempel hver tredje dag, og over lengre tid.
                 </p>
               </div>
-              <a class="btn btn-xl text-uppercase js-scroll-trigger mt-5" href="#why">Lær mer</a>
+              <a class="btn btn-xl text-uppercase js-scroll-trigger intro-button" href="#why">Lær mer</a>
             </div>
           </div>
         </div>
-        <!--<div class="intro-text">
-          <div class="col-md-12">
-              <a class="hero-brand" href="#page-top" title="Home"><img alt="Psynapse" src="img/logo.svg"></a>
-          </div>
-          <div class="intro-heading text-uppercase">Mikrodosering</div>
-          <img class="mb-3" width="128" height="128" src="img/Mushrooms.svg" alt="">
-          <p>
-            Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin.
-            En standard mikrodose er 10µg med LSD eller 0,1 gram med tørket psilocybinsopp. Det er
-            omtrent 10% av en vanlig brukerdose. Mikrodosene blir tatt med regelmessige intervaller,
-            for eksempel hver tredje dag, og over lengre tid.
-          </p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger mt-5" href="#why">Lær om Mikrodosering</a>
-        </div> -->
       </div>
     </header>
 
@@ -670,21 +655,15 @@
       </div>
     </section>
 
-
+    <!-- Scripts -->
     <script>document.documentElement.classList.remove("no-js");</script>
-
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
     <script src="js/script.min.js"></script>
-
     <script src="vendor/modernizr/modernizr-webp.min.js"></script>
 
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
 </html>
