--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="intro-text">
           <div class="row mt-4">
             <div class="col-lg-12 text-center">
-              <div class="intro-heading text-uppercase">Overskrift</div>
+              <div class="intro-heading text-uppercase">Mikrodosering</div>
               <img class="intro-image" width="216em" height="104em" src="img/microdose.svg" alt="">
               <div class="text-faded mb-4">
                 <p>
