--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
             <h2 class="section-heading">Årsaker til å mikrodosere</h2>
             <div class="mb-4 text-left">
               <p>
-                Selv om enkelte mener at mikrodosering gjør dem mer kreative eller produktive <sup>[1]</sup>, eller hjelper dem med å håndtere
-                depressive symptomer <sup>[2]</sup>, angst, eller nikotin- og alkoholavhengighet, er det lite forskningsmessig belegg for at
-                mikrodosering har noen effekt utover placebo <sup>[3]</sup>. Samtidig er det likevel vanlig å oppleve økt velvære ved mikrodosering <sup>[4]</sup>.
+                Enkelte rapporterer at mikrodosering gjør dem mer kreative eller produktive <sup>[1]</sup>, eller hjelper dem med å håndtere
+                depressive symptomer <sup>[2]</sup>, angst, eller nikotin- og alkoholavhengighet. Det er imidlertid lite forskningsmessig belegg
+                for at mikrodosering har noen varige postive effekter utover det som kan forklares med placeboeffekt <sup>[3]</sup>.
+                Det er imidlertid vanlig å oppleve økt velvære og bedre konsentrasjon de dagene man mikrodoserer <sup>[4]</sup>.
               </p>
               <div class="extLink">
                 <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">
@@ -291,11 +292,12 @@
             <div class="text-left">
               <p>
                 En selv-blindet, placebo-kontrollert studie med 191 deltakere fant ingen statistisk signifikante forskjeller
-                mellom mikrodosering og placebo <sup>[1]</sup>. Samtidig så man en generell forbedring av en rekke psykologiske og kognitive
-                mål i studieperioden, i tråd med erfaringsrapportene samlet av annet dr. James Fadiman <sup>[2]</sup> og flere ukontrollerte
-                studier <sup>[3]</sup><sup>[4]</sup><sup>[5]</sup>. Samlet tyder dette på at de rapporterte effektene av mikrodosering i stor grad skyldes
-                placebo-effekt. Imidlertid fant én kontrollert studie med færre deltagere at mikrodosering med LSD førte til en
-                forbedret evne til vedvarende oppmerksomhet og bedre humør <sup>[6]</sup>.
+                mellom mikrodosering og placebo når man så på langsiktige effekter  <sup>[1]</sup>. Man så imidlertid en
+                generell forbedring av en rekke psykologiske og kognitive mål i studieperioden, i tråd med erfaringsrapportene samlet
+                av annet dr. James Fadiman <sup>[2]</sup> og flere ukontrollerte studier <sup>[3]</sup><sup>[4]</sup><sup>[5]</sup>.
+                Samlet tyder dette på at de rapporterte effektene av mikrodosering i stor grad skyldes placebo-effekt. En annen kontrollert
+                studie med færre deltagere fant at mikrodosering med LSD førte til økt konsentrasjon og bedre humør mens man var under
+                påvirkning, som kan tyde på at man kan oppleve effekt de dagene man mikrodoserer <sup>[6]</sup>.
               </p>
               <div class="extLink">
                 <a target="_blank" href="https://elifesciences.org/articles/62878">
