--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
             <h2 class="section-heading">Årsaker til å mikrodosere</h2>
             <div class="mb-4 text-left">
               <p>
-                Enkelte rapporterer at mikrodosering gjør dem mer kreative eller produktive <sup>[1]</sup>, eller hjelper dem med å håndtere
-                depressive symptomer <sup>[2]</sup>, angst, eller nikotin- og alkoholavhengighet. Det er imidlertid lite forskningsmessig belegg
-                for at mikrodosering har noen varige postive effekter utover det som kan forklares med placeboeffekt <sup>[3]</sup>.
-                Det er imidlertid vanlig å oppleve økt velvære og bedre konsentrasjon de dagene man mikrodoserer <sup>[4]</sup>.
+                Enkelte rapporterer at mikrodosering gjør dem mer kreative eller produktive <sup>[1]</sup>, eller hjelper dem med å håndtere depressive symptomer,
+                angst, eller nikotin- og alkoholavhengighet <sup>[2]</sup>. Det er imidlertid lite forskningsmessig belegg for at mikrodosering har noen varige
+                postive effekter utover det som kan forklares med placeboeffekt <sup>[3]</sup><sup>[4]</sup>.
               </p>
               <div class="extLink">
                 <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">
@@ -151,9 +150,9 @@
                 </a>
               </div>
               <div class="extLink">
-                <a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0924977X20309111?dgcid=rss_sd_all">
+                <a target="_blank" href="https://www.nature.com/articles/s41398-022-02039-0">
                  <sup>[4]</sup>
-                 <span class="link__el">Mood and cognition after administration of low LSD doses in healthy volunteers: A placebo controlled dose-effect finding study</span>
+                 <span class="link__el">Microdosing with psilocybin mushrooms: a double-blind placebo-controlled study</span>
                  <span class="link__postfix">↗</span>
                 </a>
               </div>
@@ -182,23 +181,15 @@
               <p class="mb-4">
                 I perioden med mikrodosering er det lurt å føre dagbok. Skriv ned humør, energinivå, kreativitet og generell
                 allmenntilstand - både for dagene man tar en mikrodose og dagene man ikke gjør det. Å føre dagbok kan gi en
-                bedre forståelse av hvilken effekt mikrodosering har på hverdagen, og gjøre det lettere å vurdere positive
-                og negative effekter.
-              </p>
-              <p>
-                <strong class="">Volumetrisk dosering av LSD</strong>
+                bedre forståelse av hvilken effekt mikrodosering har på hverdagen, og gjøre det lettere å vurdere positive og negative effekter.
               </p>
               <p class="mb-4">
-                Dosene kan måles opp på flere måter, men for LSD er det best å gjøre en volumetrisk dosering. Det vil si å
-                blande ut en dose i alkohol eller destillert vann, slik at man vet omtrent hvor stor konsentrasjon man har,
-                og måle opp ønsket mengde for mikrodosering.
-              </p>
-              <p>
-                <strong>Dosering av psilocybin-sopp</strong>
+                Dosene kan måles opp på flere måter, men for LSD er det best å gjøre en volumetrisk dosering. Det vil si å blande ut en dose i
+                alkohol eller destillert vann, slik at man vet omtrent hvor stor konsentrasjon man har, og måle opp ønsket mengde for mikrodosering.
               </p>
               <p class="mb-4">
-                Individuelle sopper kan inneholde svært varierende mengder med psilocybin. Derfor bør den tørkede soppen
-                males opp til pulver, før man bruker en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.
+                Individuelle sopper kan inneholde svært varierende mengder med psilocybin. Derfor bør den tørkede soppen males opp til pulver,
+                før man bruker en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.
               </p>
             </div>
           </div>
@@ -291,13 +282,13 @@
             <h2 class="section-heading">Hva sier forskningen om mikrodosering?</h2>
             <div class="text-left">
               <p>
-                En selv-blindet, placebo-kontrollert studie med 191 deltakere fant ingen statistisk signifikante forskjeller
-                mellom mikrodosering og placebo når man så på langsiktige effekter  <sup>[1]</sup>. Man så imidlertid en
-                generell forbedring av en rekke psykologiske og kognitive mål i studieperioden, i tråd med erfaringsrapportene samlet
-                av annet dr. James Fadiman <sup>[2]</sup> og flere ukontrollerte studier <sup>[3]</sup><sup>[4]</sup><sup>[5]</sup>.
-                Samlet tyder dette på at de rapporterte effektene av mikrodosering i stor grad skyldes placebo-effekt. En annen kontrollert
-                studie med færre deltagere fant at mikrodosering med LSD førte til økt konsentrasjon og bedre humør mens man var under
-                påvirkning, som kan tyde på at man kan oppleve effekt de dagene man mikrodoserer <sup>[6]</sup>.
+                En selv-blindet, placebo-kontrollert studie med 191 deltakere fant ingen statistisk signifikante
+                forskjeller mellom mikrodosering av LSD og placebo når man så på langsiktige effekter <sup>[1]</sup>. Man så
+                imidlertid en generell forbedring av en rekke psykologiske og kognitive mål i studieperioden, i
+                tråd med erfaringsrapportene samlet av annet dr. James Fadiman  <sup>[2]</sup> og flere ukontrollerte studier <sup>[3]</sup><sup>[4]</sup><sup>[5]</sup>.
+                En placebo-kontrollert studie med 34 deltakere som undersøkte mulige effekter av mikrodosering med fleinsopp
+                fant heller ingen statistisk signifikante effekter på velvære, kreativitet eller kognitiv funksjon sammenlignet
+                med placebogruppen <sup>[6]</sup>. Samlet tyder dette på at de rapporterte effektene av mikrodosering i stor grad skyldes placebo-effekt.
               </p>
               <div class="extLink">
                 <a target="_blank" href="https://elifesciences.org/articles/62878">
@@ -335,9 +326,9 @@
                </a>
              </div>
               <div class="extLink">
-                <a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0924977X20309111?dgcid=rss_sd_all">
+                <a target="_blank" href="https://www.nature.com/articles/s41398-022-02039-0">
                   <sup>[6]</sup>
-                  <span class="link__el">Mood and cognition after administration of low LSD doses in healthy volunteers: A placebo controlled dose-effect finding study</span>
+                  <span class="link__el">Microdosing with psilocybin mushrooms: a double-blind placebo-controlled study</span>
                   <span class="link__postfix">↗</span>
                 </a>
               </div>
@@ -374,32 +365,30 @@
                   <i class="fa fa-exclamation-triangle fa-2x mt-2 mb-2"></i>
                 </div>
                 <div class="col">
-                  Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller
-                  fengselsstraff.
+                  Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.
                 </div>
               </div>
             </div>
             <p class="mb-4">
-              Psykedelika har i flere ekspertvurderinger blitt rangert å ha lavere risiko enn andre rusmidler <sup>[1]</sup><sup>[2]</sup><sup>[3]</sup>.
-              Psykedelika er kroppslig veltolerert, og er ikke avhengighetsdannende <sup>[4]</sup>. Det er imidlertid liten forskning
-              på konsekvensene av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere
-              over mer enn et par måneder av gangen.
+              Psykedelika har i flere ekspertvurderinger blitt rangert å ha lavere risiko enn andre rusmidler <sup>[1]</sup><sup>[2]</sup><sup>[3]</sup>. Psykedelika er
+              kroppslig veltolerert, og er ikke avhengighetsdannende <sup>[4]</sup>. Det er imidlertid liten forskning på konsekvensene av regelmessig
+              bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et par måneder av gangen.
             </p>
             <p class="mb-4">
-              I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser <sup>[4]</sup>. Dette er en
-              usannsynlig risiko ved mikrodosering. Det er også mulig å merke en forsterkning av negative følelser ved
-              mikrodosering. Vurder din egen mentale tilstand før du velger å mikrodosere. Dersom du lider av alvorlige
-              mentale lidelser, som schizofreni, bør du diskutere med fastlegen før du velger å mikrodosere.
+              I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser <sup>[4]</sup>. Dette er en usannsynlig risiko
+              ved mikrodosering. Det er også mulig å merke en forsterkning av negative følelser ved mikrodosering. Vurder din egen mentale
+              tilstand før du velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser, som schizofreni, bør du diskutere med
+              fastlegen før du velger å mikrodosere.
             </p>
             <p class="mb-4">
-              Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene,
-              bør du bruke testutstyr for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME,
-              kan bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD,  dødsfall har forekommet etter bruk av
-              disse produktene. Vi anbefaler derfor alle som har bestemt seg for å bruke psykedelika å bruke testutstyr.
+              Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, bør du bruke testutstyr
+              for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME, kan bli solgt som LSD. Disse har en helt annen
+              risikoprofil enn LSD,  dødsfall har forekommet etter bruk av disse produktene. Vi anbefaler derfor alle som har bestemt seg for å
+              bruke psykedelika å bruke testutstyr.
             </p>
             <p class="mb-4">
-              Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller
-              fengselsstraff. Dette kan innebære involvering av barnevernet og inndrag av førerkort.
+              Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.
+              Dette kan innebære involvering av barnevernet og inndrag av førerkort.
             </p>
             <div class="extLink">
               <a target="_blank" href="https://www.thelancet.com/action/showPdf?pii=S0140-6736%2810%2961462-6">
